* Fixed problems with canvas shim. Excanvas has a newer version on their repo that works pretty well. * Merge all the changes into the widget directory * All the demos work more or less in older browsers (the sprites demo needs special CSS to adjust everything but shouldn't take too long).

--- a/widgets/DockedMenu/demo/css/style.css
+++ b/widgets/DockedMenu/demo/css/style.css
@@ -1,4 +1,4 @@
-﻿/* reset styles
+/* reset styles
 --------------------------------------------- */
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
@@ -33,7 +33,7 @@ table {
 body{
     font-family: 'Verdana', sans-serif;
     color: #3a3a3a;    
-    background:#fff url("../../images/body-bg.jpg");    
+    background:#fff url(../images/body-bg.jpg);    
  }
  
  
@@ -66,10 +66,9 @@ p{
     position: absolute;    
     width: 100%;    
     color:#333;
-    background:  url("../images/body-bg.jpg");
+    background:  url(../images/body-bg.jpg);
     height:50px;
-    border-bottom:solid 1px #dcdcdc;    
-    left:0;
+     border-bottom:solid 1px #dcdcdc;    
 }
 
 .ui-header h2{
@@ -83,6 +82,7 @@ p{
     height:50px;
     color:#fff;
     border-top:solid 1px #000;
+    bottom:0px;
 }
 .ui-footer h2{
     margin: 15px auto 10px 50px;
@@ -122,4 +122,3 @@ p{
 @-webkit-keyframes fadein {  to { opacity: 1; } }
 
 @-webkit-keyframes fadeout {  to { opacity: 0;} }
-
